	PR tree-optimization/18601 	* tree-cfg.c (thread_jumps, thread_jumps_from_bb): Removed. 	(tree_forwarder_block_p): Do not consider blocks that are its own 	successors forwarders. 	(cleanup_forwarder_blocks, remove_forwarder_block): New functions. 	(cleanup_tree_cfg): Use cleanup_forwarder_blocks instead of 	thread_jumps. 	* tree-flow.h (bb_ann_d): Remove forwardable.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@91787 138bc75d-0d04-0410-961f-82ee72b054a4